--- a/Interactives.ipynb
+++ b/Interactives.ipynb
@@ -35,7 +35,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!ln -s /srv/data/shared/Interactives Interactives"
+    "!ln -s /srv/data/shared/Interactives ~/python4spectroscopy/Interactives"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-danger\">Did the <strong>Interactives</strong> directory show up on the left panel?  If not - do NOT proceed - let me know.</div>"
    ]
   },
   {
@@ -73,8 +80,16 @@
     "1. [Synthetic $\\ell$-v Diagram](Interactives/Synthetic_LV_Diagram.ipynb) -  This interactive takes a Milky Way-like rotation curve and neutral gas profile and generates a synthetic $\\ell$-v diagram.  Users can then simply trace out a new rotation curve or neutral gas profile and see the corresponding $\\ell$-v diagram.\n",
     "2. [Synthetic HI Spectra](Interactives/Synthetic_Galaxy_HI_Spectra.ipynb) - This interactive model allows a student to see the single-dish (unresolve) HI spectra or the resolved HI spectra (aka velocity map) corresponding to a given model galaxy.  As with the $\\ell$-v diagram interactive, users can  trace out a new rotation curve or neutral gas profile and see the corresponding spectra.\n",
     "\n",
-    "### Spectroscopy Visualizations\n",
-    "*To Be Added ...*"
+    "### Intro to Spectroscopy Course Visualizations\n",
+    "1. [Blackbody Spectra Interactives](Interactives/Blackbody_Simulation.ipynb) - This set of interactive figures can be used to explore the properties of the Blackbody spectrum as applied to stars.\n",
+    "2. Others to be added later ..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Click on the Blackbody Spectra Interactive above"
    ]
   },
   {
