--- a/light_basics.ipynb
+++ b/light_basics.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "5631271b-02b6-4bf9-ab5a-73ea83ce52d9",
    "metadata": {
     "editable": true,
@@ -62,15 +62,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The wavelength of visible light that has a frequency of 5.66×10^14 Hz is 5.30e-07 m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "f = 5.66e14 #hz\n",
     "c = 3e8  #m/s\n",
@@ -95,18 +87,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "b1d1c248-39dc-41c3-acf2-a8d31df0f2f2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "the distance between those wave crests at sea in km is 150.0 m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "f = 4/(60 * 60) #hz\n",
     "c = 600e3/(60 * 60) #m/s\n",
@@ -165,7 +149,13 @@
    },
    "cell_type": "markdown",
    "id": "a00ea816-fa18-45d9-a080-24296df9c81b",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "![Screenshot 2024-07-18 at 6.55.09 PM.png](attachment:81309d62-5a05-45cd-88a6-ccac4bb43409.png)"
    ]
@@ -189,12 +179,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "b2aaa50e-1847-4b33-b272-40d0589fcce6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!ln -s /srv/data/shared/Interactives ~/python4spectroscopy/Interactives"
+    "![ ! -d \"./Interactives\" ] && ln -s /srv/data/shared/Interactives ~/python4spectroscopy/Interactives"
    ]
   },
   {
