--- a/light_matter/light_basics.ipynb
+++ b/light_matter/light_basics.ipynb
@@ -184,7 +184,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "![ ! -d \"./Interactives\" ] && ln -s /srv/data/shared/Interactives ~/python4spectroscopy/Interactives"
+    "![ ! -d \"~/python4spectroscopy/Interactives\" ] && ln -s /srv/data/shared/Interactives ~/python4spectroscopy/Interactives"
    ]
   },
   {
