--- a/light_matter/light_basics.ipynb
+++ b/light_matter/light_basics.ipynb
@@ -192,7 +192,7 @@
    "id": "ab750816-79f4-4539-8ef7-b1429bc02a26",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-danger\">Did the <strong>Interactives</strong> directory show up on the left panel?  If not - do NOT proceed - let me know.</div>"
+    "<div class=\"alert alert-danger\">Did the <strong>Interactives</strong> directory show up inside the  <strong>python4spectroscopy</strong> directory the left panel?  If not - do NOT proceed - let me know.</div>"
    ]
   },
   {
