--- a/light_matter/light_basics.ipynb
+++ b/light_matter/light_basics.ipynb
@@ -200,7 +200,7 @@
    "id": "33dc3fe1-76ff-4347-88ca-5e606dc731a4",
    "metadata": {},
    "source": [
-    "#### 1. [Blackbody Spectra Interactives](Interactives/Blackbody_Simulation.ipynb) - This set of interactive figures can be used to explore the properties of the Blackbody spectrum as applied to stars.\n",
+    "#### 1. [Blackbody Spectra Interactives](../Interactives/Blackbody_Simulation.ipynb) - This set of interactive figures can be used to explore the properties of the Blackbody spectrum as applied to stars.\n",
     "#### 2. Other interactives to be added later ..."
    ]
   },
