--- a/light_matter/light_basics.ipynb
+++ b/light_matter/light_basics.ipynb
@@ -173,43 +173,13 @@
    "id": "d0e19cff-8212-4ac4-a437-6356653983ba",
    "metadata": {},
    "source": [
-    "## Execute the cell below\n",
-    "### Then wait a few seconds to see if the directory ```Interactives``` appeared in the panel to the left"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b2aaa50e-1847-4b33-b272-40d0589fcce6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "![ ! -d \"~/python4spectroscopy/Interactives\" ] && ln -s /srv/data/shared/Interactives ~/python4spectroscopy/Interactives"
+    "## [Launch the Interactives Jupyter Notebook by clicking here](../Interactives_index.ipynb)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ab750816-79f4-4539-8ef7-b1429bc02a26",
+   "id": "19793711",
    "metadata": {},
-   "source": [
-    "<div class=\"alert alert-danger\">Did the <strong>Interactives</strong> directory show up inside the  <strong>python4spectroscopy</strong> directory the left panel?  If not - do NOT proceed - let me know.</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "33dc3fe1-76ff-4347-88ca-5e606dc731a4",
-   "metadata": {},
-   "source": [
-    "#### 1. [Blackbody Spectra Interactives](../Interactives/Blackbody_Simulation.ipynb) - This set of interactive figures can be used to explore the properties of the Blackbody spectrum as applied to stars.\n",
-    "#### 2. Other interactives to be added later ..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e7263c31-34bc-4e63-b0f4-9859a9269ff0",
-   "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
