--- a/Interactives_index.ipynb
+++ b/Interactives_index.ipynb
@@ -25,18 +25,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "![ ! -d \"Interactives\" ] && ln -s /srv/data/shared/Interactives ~/python4spectroscopy"
+    "![ ! -d \"$HOME/Interactives\" ] && ln -s /srv/data/shared/Interactives $HOME/python4spectroscopy"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-danger\">Did the <strong>Interactives</strong> directory show up on the left panel?  If not - do NOT proceed - let me know.</div>"
+    "<div class=\"alert alert-danger\">Did the <strong>Interactives</strong> folder show up inside the <strong>python4spectroscopy</strong> folder on the left panel?  If not - do NOT proceed - let me know.</div>"
    ]
   },
   {
