--- a/light_matter/light_basics.ipynb
+++ b/light_matter/light_basics.ipynb
@@ -165,7 +165,25 @@
    "id": "b45c9ecc-6615-4d8c-ac1e-7800524b951e",
    "metadata": {},
    "source": [
-    "However, this is for idealzed stars.  Let's examine some ```Interactive``` Jupyter notebooks to see if we can understand this phenomena better."
+    "## However, this is for idealzed stars.  Let's examine some ```Interactive``` Jupyter notebooks to see if we can understand this phenomena better."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6dd4003-bebd-4d71-ae2e-29c1bd75c79b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "![ ! -d \"$HOME/Interactives\" ] && ln -s /srv/data/shared/Interactives $HOME/python4spectroscopy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56536244-a175-4cc4-897f-07c720c2781d",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-danger\">Did the <strong>Interactives</strong> folder show up inside the <strong>python4spectroscopy</strong> folder on the left panel?  If not - do NOT proceed - let me know.</div>"
    ]
   },
   {
